corrected spacing between loading button and above text

--- a/src/fermo/static/css/style.css
+++ b/src/fermo/static/css/style.css
@@ -8,3 +8,6 @@
     --bs-btn-hover-border-color: #0e526e;
 }
 
+#loading-button{
+    margin-top: 100px;
+}
